Fixed the paddingg of the bottom container to align well on mobile screen

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ small{
 }
 @media(min-width: 1000px){
    body{
-      background-image: url("../images/bg-intro-desktop.png")
+      background-image: url("../images/bg-intro-desktop.png");
    }
    #container{
       margin: auto;
@@ -80,8 +80,11 @@ small{
 @media(max-width: 989px){
    body{
       background-image: url("../images/bg-intro-mobile.png");
+      background-position: cover;
       text-align: center;
-      max-width: 100vw;
+      margin: auto;
+      max-width: 95vw;
+      max-height: fit-content;
    }
    h1{
       font-weight: 400;
@@ -90,23 +93,24 @@ small{
    #container{
       flex-direction: column;
       padding: 0;
-      margin: 0 auto;
-      width: 100%;
+      margin: 2em auto;
+      width: 90%;
    }
    .textarticle{
-      width: 90%;
-      padding: 1em 5%;
+      width: 100%;
+      padding: 0;
       margin: auto;
    }
    .register{
-      margin: 0 auto;
-      width: 90%;
-      padding: 1em 5%;
+      justify-content: center;
+      margin: auto;
+      width: 100%;
+      padding: 0%
    }
    form{
-      padding: 1em;
-      width: 100%;
-      margin: 0 auto;
+      padding: ;
+      width: 90%;
+      margin:auto;
    }
    input{
       width: 80%;
@@ -118,7 +122,7 @@ small{
    }
    .formhead{
       background-color: #5D54A3;
-      width: 100%;
+      width: 90%;
       margin: auto auto .5em;
       padding: .5em 1em;
       border-radius: 8px;
